--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -8346,26 +8346,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1d98b3a7-a29e-4fe8-8f8f-bff718e377b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acc: 82.22%\n",
+      "Precision: 0.84\n",
+      "Recall: 0.84\n",
+      "F1 score: 0.84\n"
+     ]
+    }
+   ],
    "source": [
     "# changing n_estimators\n",
     "np.random.seed(42)\n",
     "\n",
     "# create a second clf with different hyperparams\n",
     "clf_2 = RandomForestClassifier(n_estimators=100)\n",
-    "clf_2"
+    "clf_2.fit(X_train, y_train)\n",
+    "\n",
+    "# Make preds\n",
+    "y_preds_2 = clf_2.predict(X_valid)\n",
+    "\n",
+    "# Evaluate the 2nd classifier\n",
+    "clf_2_metrics = evaluate_preds(y_valid, y_preds_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "043d0531-8dad-4842-9bf0-adc63c0604a3",
+   "metadata": {},
+   "source": [
+    "### 5.2 Hyperparameter tuning with RandomizedSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "463b5396-c645-4091-a066-6c2a71604676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=1200; total time=  12.3s\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=1200; total time=  12.5s\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=1200; total time=  11.0s\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=1200; total time=  10.3s\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=1200; total time=   9.9s\n",
+      "[CV] END max_depth=30, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=100; total time=   0.8s\n",
+      "[CV] END max_depth=30, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=100; total time=   0.9s\n",
+      "[CV] END max_depth=30, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=100; total time=   0.9s\n",
+      "[CV] END max_depth=30, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=100; total time=   0.9s\n",
+      "[CV] END max_depth=30, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=100; total time=   0.8s\n",
+      "[CV] END max_depth=10, max_features=sqrt, min_samples_leaf=2, min_samples_split=2, n_estimators=200; total time=   1.9s\n",
+      "[CV] END max_depth=10, max_features=sqrt, min_samples_leaf=2, min_samples_split=2, n_estimators=200; total time=   1.7s\n",
+      "[CV] END max_depth=10, max_features=sqrt, min_samples_leaf=2, min_samples_split=2, n_estimators=200; total time=   1.6s\n",
+      "[CV] END max_depth=10, max_features=sqrt, min_samples_leaf=2, min_samples_split=2, n_estimators=200; total time=   1.7s\n",
+      "[CV] END max_depth=10, max_features=sqrt, min_samples_leaf=2, min_samples_split=2, n_estimators=200; total time=   2.5s\n",
+      "[CV] END max_depth=20, max_features=auto, min_samples_leaf=1, min_samples_split=6, n_estimators=100; total time=   3.7s\n",
+      "[CV] END max_depth=20, max_features=auto, min_samples_leaf=1, min_samples_split=6, n_estimators=100; total time=   1.4s\n",
+      "[CV] END max_depth=20, max_features=auto, min_samples_leaf=1, min_samples_split=6, n_estimators=100; total time=   0.8s\n",
+      "[CV] END max_depth=20, max_features=auto, min_samples_leaf=1, min_samples_split=6, n_estimators=100; total time=   0.8s\n",
+      "[CV] END max_depth=20, max_features=auto, min_samples_leaf=1, min_samples_split=6, n_estimators=100; total time=   0.8s\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=1, min_samples_split=4, n_estimators=10; total time=   0.0s\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=1, min_samples_split=4, n_estimators=10; total time=   0.0s\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=1, min_samples_split=4, n_estimators=10; total time=   0.1s\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=1, min_samples_split=4, n_estimators=10; total time=   0.0s\n",
+      "[CV] END max_depth=5, max_features=sqrt, min_samples_leaf=1, min_samples_split=4, n_estimators=10; total time=   0.0s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=10; total time=   0.1s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=10; total time=   0.0s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=10; total time=   0.0s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=10; total time=   0.1s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=2, min_samples_split=4, n_estimators=10; total time=   0.0s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=500; total time=   4.1s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=500; total time=   8.6s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=500; total time=  10.7s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=500; total time=  12.1s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=500; total time=   4.6s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=200; total time=   1.6s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=200; total time=   1.5s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=200; total time=   1.6s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=200; total time=   1.5s\n",
+      "[CV] END max_depth=None, max_features=sqrt, min_samples_leaf=2, min_samples_split=6, n_estimators=200; total time=   1.5s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=4, min_samples_split=4, n_estimators=200; total time=   1.6s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=4, min_samples_split=4, n_estimators=200; total time=   1.7s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=4, min_samples_split=4, n_estimators=200; total time=   1.5s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=4, min_samples_split=4, n_estimators=200; total time=   1.6s\n",
+      "[CV] END max_depth=10, max_features=auto, min_samples_leaf=4, min_samples_split=4, n_estimators=200; total time=   1.5s\n",
+      "[CV] END max_depth=20, max_features=sqrt, min_samples_leaf=2, min_samples_split=4, n_estimators=1000; total time=  14.7s\n",
+      "[CV] END max_depth=20, max_features=sqrt, min_samples_leaf=2, min_samples_split=4, n_estimators=1000; total time=   7.8s\n",
+      "[CV] END max_depth=20, max_features=sqrt, min_samples_leaf=2, min_samples_split=4, n_estimators=1000; total time=   7.7s\n",
+      "[CV] END max_depth=20, max_features=sqrt, min_samples_leaf=2, min_samples_split=4, n_estimators=1000; total time=   7.6s\n",
+      "[CV] END max_depth=20, max_features=sqrt, min_samples_leaf=2, min_samples_split=4, n_estimators=1000; total time=   7.6s\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "# we re going to use a dict \n",
+    "grid = {\"n_estimators\": [10, 100, 200, 500, 1000, 1200],\n",
+    "        \"max_depth\": [None, 5, 10, 20, 30],\n",
+    "        \"max_features\": [\"auto\", \"sqrt\"],\n",
+    "        \"min_samples_split\": [2, 4, 6],\n",
+    "        \"min_samples_leaf\": [1, 2, 4]\n",
+    "       }\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Split into X & y\n",
+    "X = heart_disease_shuffled.drop(\"target\", axis=1)\n",
+    "y = heart_disease_shuffled[\"target\"]\n",
+    "\n",
+    "# Split into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Instantiate model\n",
+    "clf = RandomForestClassifier(n_jobs=1)\n",
+    "\n",
+    "# Setup RandomizedSearchCV\n",
+    "rs_clf = RandomizedSearchCV(estimator=clf, \n",
+    "                            param_distributions=grid,\n",
+    "                            n_iter=10, # number of models to try\n",
+    "                            cv=5, # cross validation\n",
+    "                            verbose=2)\n",
+    "\n",
+    "# Fit the randomizedSearchCV version of clf\n",
+    "rs_clf.fit(X_train, y_train);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ae9cb58c-8d80-4310-ae97-b5c2f567f85c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n_estimators': 200,\n",
+       " 'min_samples_split': 6,\n",
+       " 'min_samples_leaf': 2,\n",
+       " 'max_features': 'sqrt',\n",
+       " 'max_depth': None}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs_clf.best_params_"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cefadf6-ae75-4005-88a5-71954e84420e",
+   "id": "446799e3-9808-4363-b5eb-2997bef2079c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Make predictions with the best hyperparameters, rs_clf automatically selects the best params\n",
+    "rs_y_preds = rs_clf.predict(X_test)\n",
+    "\n",
+    "# evaluate the predictions\n",
+    "rs_metrics = evaluate_preds(y_test, rs)"
+   ]
   }
  ],
  "metadata": {
